# nuop

./: .envrc  .gitignore  .laio.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  devenv-ci.nix  devenv.nix  devshell.toml  flake.nix  justfile  lefthook.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  (+6 more)
operator/: .dockerignore  Cargo.toml  Makefile  flake.nix
operator/chart/: Chart.yaml  values.yaml
operator/chart/crds/: nuop.yaml
operator/chart/templates/: _helpers.tpl  deployment.tpl  rbac.tpl
operator/docker/: Dockerfile  Dockerfile.local  entrypoint  init-sources  install-crds
operator/nix/: build.nix  default.nix  utils.nix
operator/scripts/: README.md  config-replicator  secret-cloner
operator/scripts/config-replicator/: mod.nu
operator/scripts/secret-cloner/: mod.nu
operator/src/: lib.rs  main.rs
operator/src/manager/: mod.rs
operator/src/manager/model/: generate.rs  mod.rs  nu_operator.rs
operator/src/nuop/: config.rs  constants.rs  logging.rs  mod.rs  util.rs
operator/src/nuop/manager/: controller.rs  controller_tests.rs  mod.rs  reconciler.rs  state.rs
operator/src/nuop/manager/model/: generate.rs  mapping.rs  mod.rs  source.rs
operator/src/nuop/manager/resources/: config_map.rs  config_map_tests.rs  deployment.rs  deployment_tests.rs  mod.rs
operator/src/nuop/reconciler/: config.rs  controller.rs  controller_tests.rs  finalizer.rs  managed.rs  managed_tests.rs  mod.rs  standard.rs  standard_tests.rs  state.rs  util.rs
operator/src/nuop/reconciler/controller_tests/scripts/: configmap.nu  custom-requeue.nu  error.nu  no-finalizer.nu  success-no-changes.nu  success-with-changes.nu  unexpected-exit-code.nu
operator/src/nuop/reconciler/controller_tests/scripts/configmap/: mod.nu
operator/src/nuop/reconciler/controller_tests/scripts/custom-requeue/: mod.nu
operator/src/nuop/reconciler/controller_tests/scripts/error/: mod.nu
operator/src/nuop/reconciler/controller_tests/scripts/no-finalizer/: mod.nu
operator/src/nuop/reconciler/controller_tests/scripts/success-no-changes/: mod.nu
operator/src/nuop/reconciler/controller_tests/scripts/success-with-changes/: mod.nu
operator/src/nuop/reconciler/controller_tests/scripts/unexpected-exit-code/: mod.nu
operator/src/nuop/reconciler/managed_tests/mappings/: deployment-mapping.yaml  duplicate-mapping.yaml  invalid-mapping.yaml  pod-mapping.yaml  service-mapping.yaml
operator/src/nuop/reconciler/managed_tests/scripts/: deployment-script.nu  deployment-script.sh  duplicate-script.nu  duplicate-script.sh  invalid-config-script.nu  invalid-config-script.sh  no-mapping-script.nu  no-mapping-script.sh  pod-script.nu  pod-script.sh  service-script.nu  service-script.sh
operator/src/nuop/reconciler/managed_tests/scripts/deployment-script/: mod.nu
operator/src/nuop/reconciler/managed_tests/scripts/duplicate-script/: mod.nu
operator/src/nuop/reconciler/managed_tests/scripts/invalid-config-script/: mod.nu
operator/src/nuop/reconciler/managed_tests/scripts/no-mapping-script/: mod.nu
operator/src/nuop/reconciler/managed_tests/scripts/pod-script/: mod.nu
operator/src/nuop/reconciler/standard_tests/scripts/: configmap-controller.nu  configmap-controller.sh  deployment-controller.nu  deployment-controller.sh  duplicate-pod-controller.nu  duplicate-pod-controller.sh  invalid-config-controller.nu  invalid-config-controller.sh  pod-controller.nu  pod-controller.sh  secret-controller.nu  secret-controller.sh  service-controller.nu  service-controller.sh
(+48 files in other folders)
