[package]
name = "operator"
description = "Nushell Operator"
version = "0.1.3"
edition = "2024"

[profile.release]
opt-level = "z" # Optimize for size
lto = true # Enable Link Time Optimization
codegen-units = 1 # Reduce the number of codegen units to improve optimization
debug = false # Disable debug information
panic = "abort" # Abort on panic to reduce binary size
strip = "symbols" # Strip symbols to reduce binary size

[lib]
name = "operator"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
futures = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["latest","schemars" ] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json"] }

[dev-dependencies]
mockall = "0.13.1"
http = "1.3.1"
tower-test = "0.4.0"
tempfile = "3.23.0"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }

[[bin]]
name = "generate"
path = "src/nuop/manager/model/generate.rs"
